Tue Jun  9 22:53:59 1998  Martin Mares  <mj@albireo.ucw.cz>

	* Released as 1.06.

	* names.c (parse_name_list): Killed an unused variable.

	* setpci.c (pread, pwrite): Define SYS_(pread|pwrite) as __NR_\1
	if they are not defined by glibc (needed for glibc built on older
	kernels). Ugly.

	* setpci.c (exec_op): Fixed error messages. Thanks, Steve!

Mon Jun  8 10:59:22 1998  Martin Mares  <mj@albireo.ucw.cz>

	* Released as 1.05.

	* setpci.c: Problems with pread()/pwrite() with glibc on Alpha
	should be gone. Again thanks to Steve for bug report.

	* filter.c (filter_parse_slot): Fixed ":x" type filters.

	* pci.ids: Killed duplicate entry. Thanks to Stephen Williams
	<steve@icarus.com> for reporting this.

Sun Jun  7 19:27:51 1998  Martin Mares  <mj@albireo.ucw.cz>

	* lspci.c (main), setpci.c (main): Implemented "--version".

	* Released as 1.04.

	* pciutils.h (PCIUTILS_VERSION): Added version string.

	* filter.c, names.c: Extraneous #include <linux/pci.h> removed.
	Thanks to Geert Uytterhoeven <Geert.Uytterhoeven@cs.kuleuven.ac.be>
	for bug report.

Thu May 28 14:45:58 1998  Martin Mares  <mj@lomikel.karlin.mff.cuni.cz>

	* pci.ids: More updates from Jens Maurer.

Wed Apr 22 10:00:39 1998  Martin Mares  <mj@albireo.ucw.cz>

	* pci.ids: Updates from Jens Maurer.

Sun Apr 19 11:14:25 1998  Martin Mares  <mj@albireo.ucw.cz>

	* Released as 1.03.

	* setpci.8: Written.

	* setpci.c: Finished.

	* lspci.c: Now able to fetch expansion ROM base from kernel device list
	and print it if not in buscentric mode.

Tue Mar 31 23:11:57 1998  Martin Mares  <mj@albireo.ucw.cz>

	* setpci.c: Added.

Sun Mar 22 15:39:08 1998  Martin Mares  <mj@albireo.ucw.cz>

	* lspci.8: Updated the documentation.

	* lspci.c: Modified to use the new filtering mechanism (options -f and -d).

	* filter.c: Introduced new generic device filter.

Thu Mar 19 17:03:48 1998  Martin Mares  <mj@lomikel.karlin.mff.cuni.cz>

	* lspci.c (grow_tree, show_tree_dev, print_it): Fixed displaying