@@ -1,4 +1,4 @@
-This package contains the Linux PCI Utilities, version 1.06.
+This package contains the Linux PCI Utilities, version 1.07.
 
 Copyright (c) 1998 Martin Mares <mj@atrey.karlin.mff.cuni.cz>
 
@@ -36,8 +36,5 @@ notes and other news: http://atrey.karlin.mff.cuni.cz/~mj/pciutils.html.
 TODO:
 
 	- Better displaying of IRQ's generated by both PCI and CardBus bridges.
-
-	- Full displaying of CardBus bridge configuration. (Has anyone seen
-	  full specs of the CardBus bridge / header type 2?)
 
 	- Subsystem vendor and device ID?
